test/invalidwiki/Страница без аттачей/__page.opt
[General]
type = text
datetime = 2012-09-12 22:41:16.846681

